# 3DVision-tutor

./: .gitignore  README.md
devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/3DVision-tutor/: PoseEstimation  Triangulation  Triangulation.cpp
devel/lib/pkgconfig/: 3DVision-tutor.pc  viz_opencv.pc  viz_pangolin.pc
devel/lib/viz_opencv/: 1_launch_viz  2_pose_of_a_widget  3_transformation
devel/lib/viz_pangolin/: viz_pangolin_node
src/3DVision-tutor/: CMakeLists.txt
src/3DVision-tutor/include/3DVision-tutor/: Stella_ORBExtraction.hpp  common.hpp  comparison.hpp  mono_vo.hpp  motion_only_ba.hpp  stereo_vo.hpp
src/3DVision-tutor/src/: PoseEstimation.cpp  Stella_ORBExtraction.cpp  Triangulation.cpp  comparison.cpp  mono_vo.cpp  motion_only_ba.cpp  stereo_vo.cpp
src/Stella_VPS/: CMakeLists.txt  package.xml
src/Stella_VPS/src/: main.cpp  mono_vo.cpp  orb_extractor.cc  orb_extractor_node.cc  orb_impl.cc  orb_params.cc  stereo_vo.cpp
src/VPS/: CMakeLists.txt
src/prac_ceres/: CMakeLists.txt  package.xml
src/prac_ceres/ceres_test/: add_residual_1.cpp  add_residual_2.cpp  helloworld.cpp  multivariate.cpp  pose_2d.cpp  prac_template.cpp  robust_curve.cpp
src/prac_ceres/file/: poses_optimized.txt  poses_original.txt  test.g2o
src/prac_ceres/src/: ct_1_curve_fitting.cpp  ct_2_simple_bundle_adjuster.cpp  lht_1_helloworld.cpp  lht_2_add_residual.cpp  lht_3_multivariate.cpp  lht_4_pose2d.cpp
src/viz_opencv/: CMakeLists.txt
src/viz_opencv/src/: 1_launch_viz.cpp  2_pose_of_a_widget.cpp  3_transformation.cpp  (+1 more)
src/viz_pangolin/: CMakeLists.txt
(+14 files in other folders)
